--- a/Assignments/Feng_A06_GLMs_Week1.Rmd
+++ b/Assignments/Feng_A06_GLMs_Week1.Rmd
@@ -29,9 +29,21 @@ The completed exercise is due on Tuesday, February 18 at 1:00 pm.
 
 ```{r, message = FALSE}
 #1
+getwd()
+#install.packages("agricolae")
+#install.packages("tidyverse")
+#install.packages("cowplot")
 
+library(tidyverse)
+library(cowplot)
+library(agricolae)
+
+PeterPaul.nutrient <-
+  read.csv("../Data/Processed/NTL-LTER_Lake_Nutrients_PeterPaul_Processed.csv")
 
 #2
+PeterPaul.nutrient$sampledate <- as.Date(PeterPaul.nutrient$sampledate, format = "%Y-%m-%d")
+class(PeterPaul.nutrient$sampledate)
 
 ```
 
@@ -40,7 +52,13 @@ The completed exercise is due on Tuesday, February 18 at 1:00 pm.
 
 3. Wrangle your dataset so that it contains only surface depths and only the years 1993-1996, inclusive. Set month as a factor.
 ```{r}
+PeterPaul.surface93_96 <- filter(PeterPaul.nutrient,depth == "0" & year4 %in% c("1993","1994","1995","1996") ) %>%
+  select(lakeid:depth_id,depth,tn_ug:comments)   # Could I use another way to directly write 1993-1996
+PeterPaul.surface93_96
 
+class(PeterPaul.surface93_96$year4)
+PeterPaul.surface93_96$year4 <- as.factor(PeterPaul.surface93_96$year4)
+class(PeterPaul.surface93_96$year4)
 
 ```
 
@@ -58,7 +76,12 @@ Peter Lake was manipulated with additions of nitrogen and phosphorus over the ye
 
 ```{r}
 #5
+TN_seasonally <- PeterPaul.surface93_96 %>%
+  select(lakename, month, year4, tn_ug)
+TN_seasonally
 
+TN_seasonally.anova.2way <- aov(data = TN_seasonally, tn_ug ~ lakename + month)
+summary(TN_seasonally.anova.2way)
 
 #6
 
@@ -71,9 +94,42 @@ Peter Lake was manipulated with additions of nitrogen and phosphorus over the ye
 
 ```{r}
 #7
+plot_TN <- ggplot(PeterPaul.surface93_96, aes(x = year4, y = tn_ug, color = lakename)) +
+  geom_boxplot() +
+  labs(x=expression(paste("Month"))) + 
+  labs(y=expression(paste("Total Nitrogen (",mu,"g/L)"))) +
+  labs(color="Lake Name") +
+  stat_summary(geom = "text", fun.y = max, vjust = -1, size = 4,
+  label = c("1", "1", "1", "1", "1", "1", "1", "1"),
+  position = position_dodge(width=0.75))   # how do we determine the numer 0.75
+  #scale_color_brewer(palette = "Set1") +
+  #theme(legend.position = "right")
+
+plot_TN
+
+
+
+plot_TP <- ggplot(PeterPaul.surface93_96, aes(x = month, y = tp_ug, color = lakename)) + # month does not work
+  geom_boxplot() +
+  labs(x=expression(paste("Month"))) + 
+  labs(y=expression(paste("Total Phosphorus (",mu,"g/L)")))+
+  labs(color="Lake Name")+
+  stat_summary(geom = "text", fun.y = max, vjust = -1, size = 4,
+  label = c("1", "1", "1", "1", "1", "1", "1", "1"),
+  position = position_dodge(width=0.75)) +    # how do we determine the numer 0.75
+  scale_y_continuous(expand = c(0.2, 0.2)) 
+  #scale_color_brewer(palette = "Set1") +
+  #theme(legend.position = "right")
+
+plot_TP
 
 
 #8
+CombinedPlot <- plot_grid(plot_TN+theme(legend.position="top"),
+                          plot_TP+theme(legend.position="none"), 
+                          nrow=2, labels=c('A', 'B'))   
+print(CombinedPlot)
+
 
 ```
 
