--- a/Lessons/09_DataVisualization_KEY.Rmd
+++ b/Lessons/09_DataVisualization_KEY.Rmd
@@ -219,6 +219,7 @@ A useful guide for aligning plots by axis can be found here: https://wilkelab.or
 library(cowplot)
 plot_grid(NvsP2, Nutrientplot, nrow = 2, align = 'h', rel_heights = c(1.25, 1))
 
+#align: "t" (top), "r" (right), "b" (bottom), and "l" (left)
 ```
 
 ### Saving plots
