mixed effects model

--- a/Assignments/Feng_A07_GLMs_Week2.Rmd
+++ b/Assignments/Feng_A07_GLMs_Week2.Rmd
@@ -104,9 +104,7 @@ ggplot(ChemPhy_Wrangle, aes(x = depth, y = temperature_C, color = lakename)) +
   geom_point(alpha = 0.5) +
   scale_color_viridis_d() +
   ylim(0,35) +
-  geom_smooth(method = "lm", se= FALSE)+ # have two line to present your results, and not include random factor
-  #geom_abline(intercept = -97.72, slope = 0.06) + #geom_abline need intercept and slope value
-  # make it look better
+  geom_smooth(method = "lm", se= FALSE) + 
   labs(x = "Depth (m)", y = expression("Temperature " ( degree~C)), color = "") +
   theme(legend.spacing.x = unit(0, "cm"))
 print(Temp_model)
@@ -116,24 +114,33 @@ print(Temp_model)
 9. Run a mixed effects model to predict dry mass of litter. We already know that nlcdClass and functionalGroup have a significant interaction, so we will specify those two variables as fixed effects with an interaction. We also know that litter mass varies across plot ID, but we are less interested in the actual effect of the plot itself but rather in accounting for the variance among plots. Plot ID will be our random effect.
 
 a. Build and run a mixed effects model.
-b. Check the difference between the marginal and conditional R2 of the model. 
+b. Check the difference between the marginal and conditional R2 of the model. (Notes: The marginal R squared values are those associated with your fixed effects, the conditional ones are those of your fixed effects plus the random effects)
 
 ```{r}
-
+#mixed effects model (nlme)
+litter.mixed.nlme = lme(dryMass ~ nlcdClass*functionalGroup,
+                     random = ~ 1|plotID,
+                     data = Litter)
+ 
+summary(litter.mixed.nlme)  # AIC = 9038.575
+rsquared(litter.mixed.nlme)
 
 ```
 
 b. continued... How much more variance is explained by adding the random effect to the model? 
 
-> Answer: 2 %
+> Answer: 2% more variance is explained by adding the random effect to the model
 
 c. Run the same model without the random effect.
 d. Run an anova on the two tests. 
 ```{r}
- 
+#model without the random effect (Fixed model)
+litter.fixed <- gls(data = Litter,dryMass ~ nlcdClass*functionalGroup)
+summary(litter.fixed)  # AIC = 9058.088
 
+anova(litter.mixed.nlme, litter.fixed) # can compare AIC and P-value of two models
 ```
 
 d. continued... Is the mixed effects model a better model than the fixed effects model? How do you know?
 
-> Answer: 
+> Answer: I think the mixed effects model is a btter model, because AIC is smaller than fixed one.
