--- a/Assignments/Feng_A07_GLMs_Week2.Rmd
+++ b/Assignments/Feng_A07_GLMs_Week2.Rmd
@@ -64,21 +64,21 @@ Research question: What is the best set of predictors for lake temperatures in J
 
 ```{r}
 #3
-ChemPhy_Wrangle <- filter(ChemPhy, daynum %in% c(182:213)) %>%
+ChemPhy_Wrangle <- filter(ChemPhy, daynum %in% c(182:212)) %>%
   select(lakename, year4, daynum, depth, temperature_C) %>%
-  na.exclude()
-ChemPhy_Wrangle
+  na.omit()
 
 #4
 TempAIC <- lm(data = ChemPhy_Wrangle, temperature_C ~ year4 + daynum + depth)
 step(TempAIC)
 summary(TempAIC)
+
 ```
 
 5. What is the final set of explanatory variables that predict temperature from your multiple regression? How much of the observed variance does this model explain?
 
 > Answer: The final set of explanartory variables is year4, daynum, depth from my multiple regression. Because according to AIC value of TempAIC, the smallest is 26781.56 (three vaiables). Each time an independent variable is removed, the value of AIC becomes larger, so the best set is year4, daynum, and depth.
-> 73.99% variation of a dependent variable is explained by the independent variable(s) in a regression model.
+> 74.17% variation of a dependent variable is explained by the independent variable(s) in a regression model.
 
 6. Run an interaction effects ANCOVA to predict temperature based on depth and lakename from the same wrangled dataset.
 
@@ -93,7 +93,7 @@ summary(LakeAncova.interaction1) # to get R-square
 
 7. Is there a significant interaction between depth and lakename? How much variance in the temperature observations does this explain?
 
-> Answer: There is a significant interaction between depth and lakename. 78.59% proportion of variance in temperature can be explained.
+> Answer: There is a significant interaction between depth and lakename. 78.61% proportion of variance in temperature can be explained.
 
 8. Create a graph that depicts temperature by depth, with a separate color for each lake. Add a geom_smooth (method = "lm", se = FALSE) for each lake. Make your points 50 % transparent. Adjust your y axis limits to go from 0 to 35 degrees. Clean up your graph to make it pretty. 
 
@@ -129,7 +129,7 @@ rsquared(litter.mixed.nlme)
 
 b. continued... How much more variance is explained by adding the random effect to the model? 
 
-> Answer: 2% more variance is explained by adding the random effect to the model
+> Answer: 2.14% more variance is explained by adding the random effect to the model
 
 c. Run the same model without the random effect.
 d. Run an anova on the two tests. 
