--- a/Assignments/Feng_A05_DataVisualization.Rmd
+++ b/Assignments/Feng_A05_DataVisualization.Rmd
@@ -145,7 +145,7 @@ print(CombinedPlot)
 
 Question: What do you observe about the variables of interest over seasons and between lakes? 
 
-> Answer: 
+> Answer: Peter lake has higher total Nitrogen and total Phosphorus, and temperature is higher in June and July.
 
 6. [Niwot Ridge] Plot a subset of the litter dataset by displaying only the "Needles" functional group. Plot the dry mass of needle litter by date and separate by NLCD class with a color aesthetic. (no need to adjust the name of each land use)
 
