--- a/Assignments/Feng_A05_DataVisualization.tex
+++ b/Assignments/Feng_A05_DataVisualization.tex
@@ -191,7 +191,7 @@ The completed exercise is due on Tuesday, February 11 at 1:00 pm.
 \end{Shaded}
 
 \begin{verbatim}
-## -- Attaching packages ------------------------------------------------------------------- tidyverse 1.3.0 --
+## -- Attaching packages ----------------------------------------------------------------- tidyverse 1.3.0 --
 \end{verbatim}
 
 \begin{verbatim}
@@ -202,7 +202,7 @@ The completed exercise is due on Tuesday, February 11 at 1:00 pm.
 \end{verbatim}
 
 \begin{verbatim}
-## -- Conflicts ---------------------------------------------------------------------- tidyverse_conflicts() --
+## -- Conflicts -------------------------------------------------------------------- tidyverse_conflicts() --
 ## x dplyr::filter() masks stats::filter()
 ## x dplyr::lag()    masks stats::lag()
 \end{verbatim}
@@ -452,7 +452,8 @@ Question: What do you observe about the variables of interest over
 seasons and between lakes?
 
 \begin{quote}
-Answer:
+Answer: Peter lake has higher total Nitrogen and total Phosphorus, and
+temperature is higher in June and July.
 \end{quote}
 
 \begin{enumerate}
