--- a/Lessons/09_DataVisualization.Rmd
+++ b/Lessons/09_DataVisualization.Rmd
@@ -194,9 +194,9 @@ print(NvsP2)
 Nutrientplot <-
   ggplot(PeterPaul.chem.nutrients.gathered, aes(x = lakename, y = concentration, color = nutrient)) +
   geom_boxplot() +
-  labs(y=expression(paste("concentration (mg/L)"))) + # change your legend labels here
+  labs(y=expression(paste("Concentration (mg/L)"))) + # change your legend labels here
   labs(x=expression(paste("")))+
-  scale_color_manual(labels = c("NH34", "NO23","PO4","TN","YP"),
+  scale_color_manual(labels = c("NH34", "NO23","PO4","TN","TP"),
                      values = c("#7fcdbb", "#41b6c4", "#1d91c0", "#225ea8", "#0c2c84"))+
 # place your additional edits here
   scale_y_continuous(expand = c(0, 0.5)) + # expand=c(0,0) has some space above the bars;0=lower space;0.5=upper space
