Add revised plots

--- a/Lessons/09_DataVisualization.Rmd
+++ b/Lessons/09_DataVisualization.Rmd
@@ -153,9 +153,9 @@ nationalparkcolors (package)
 * https://github.com/katiejolly/nationalparkcolors
 
 ```{r, warning = FALSE}
-install.packages("viridis")
-install.packages("RColorBrewer")
-install.packages("colormap")
+#install.packages("viridis")
+#install.packages("RColorBrewer")
+#install.packages("colormap")
 library(viridis)
 library(RColorBrewer)
 library(colormap)
@@ -246,7 +246,7 @@ ggplot(Neonics) +
 
 
 #combine plots
-install.packages("ggpubr")
+#install.packages("ggpubr")
 library(ggpubr)
 #or
 library("cowplot")
